module4-observability-plane/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-demo-ingress
  namespace: otel-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opentelemetry-demo-frontendproxy  
            port:
              number: 8080   
      - path: /opensearch
        pathType: Prefix
        backend:
          service:
            name: otel-demo-opensearch  
            port:
              number: 9200
